Fix elements collapse on each other

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -4,6 +4,7 @@
   background-size: cover;
   height: 100vh;
 }
+
 .header__container {
   text-align: center;
   align-items: center;
@@ -15,15 +16,14 @@
   color: white;
   justify-content: space-between;
   padding-top: 400px;
+  background-color: rgba(252, 89, 89, 0);
+background-image: linear-gradient(180deg, rgba(252, 89, 89, 0) 0%, rgba(0, 0, 0, 1) 100%);
 }
 
 .header__content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
- 
-
-  
 }
 
 .header__titlesubtitle {
@@ -36,4 +36,11 @@
 //   // width: 100%;
 //   // height: 100%;
 // }
+.main-nav {
+  background-color:rgba(0, 0, 0, 1);
+}
+.main-nav-container {
+  width: 200px;
+  margin: 0 auto;
+}
 
